<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".deleteUpdate">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="1304dp"
        android:layout_height="2206dp"
        app:srcCompat="@drawable/backgr"
        tools:layout_editor_absoluteX="-864dp"
        tools:layout_editor_absoluteY="-994dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/foto4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/the_society"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/editTextTextMultiLine3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/descri_o"
        android:inputType="textMultiLine"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:background=""
        android:text="@string/editar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine3" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="104dp"
        android:text="@string/excluir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_3" />
</androidx.constraintlayout.widget.ConstraintLayout>