<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".serieCadastrada"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="496dp"
        android:layout_height="661dp"
        app:srcCompat="@drawable/frontground"
        tools:layout_editor_absoluteX="-43dp"
        tools:layout_editor_absoluteY="-224dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/imagem_de_back" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="1078dp"
        android:layout_height="1620dp"
        app:srcCompat="@drawable/backgr"
        tools:layout_editor_absoluteX="-667dp"
        tools:layout_editor_absoluteY="-627dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:contentDescription="@string/logo_da_tela"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cadastroLogo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/texto4"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/btn_go"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/go"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>