<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cadastroActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/iv_3"
        android:layout_width="match_parent"
        android:layout_height="640dp"
        app:srcCompat="@drawable/frontground"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-244dp" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="1078dp"
        android:layout_height="1720dp"
        app:srcCompat="@drawable/backgr"
        tools:layout_editor_absoluteX="-667dp"
        tools:layout_editor_absoluteY="-627dp"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ImageView
        android:id="@+id/iv_5"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:text="@string/suas_s_ries_cadastradas"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_3" />

    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:drawableLeft="@drawable/ic_baseline_control_point_24"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="@+id/iv_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_5"
        app:layout_constraintVertical_bias="0.333" />

    <Button
        android:id="@+id/btn_pesquisar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/listar_de_series"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cadastrar" />

</androidx.constraintlayout.widget.ConstraintLayout>